<resources>
    <string name="app_name">GitHub User</string>
    <string name="search">Search</string>
    <string name="search_username">Search username</string>
    <string name="github_logo">GitHub Logo</string>
    <string name="showing_results">Showing %d results</string>
    <string name="settings">Settings</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="open_on_github">OPEN ON GITHUB</string>
    <string name="back_view">Back View</string>
    <string name="profile">Profile</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="common">Common</string>
    <string name="change_language">Change Language</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="search_illustration">Search Illustration</string>
    <string name="no_data_illustration">No Data Illustration</string>
    <string name="user_not_found">User Not Found!</string>
    <string name="has_no_followers">%s\nhas no followers</string>
    <string name="doesnt_follow_anyone">%s\ndoesn\'t follow anyone</string>
    <string name="hello_there">Hello there! I\'m using GitHub. Follow me on https://github.com/%s</string>
    <string name="open_github">https://github.com/%s</string>
    <string name="share_via">Share via</string>
    <string name="github_connection">GitHub Connection</string>
    <string name="favorite">Favorite</string>
    <string name="you_don_t_have_a_favorite_user">You don\'t have a favorite user</string>
    <string name="success_added">Successfully added to favorites!</string>
    <string name="deleted_success">Favorite deleted successfully!</string>
    <string name="undo">Undo</string>
    <string name="close">Close</string>
</resources>