<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/mainToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/back_view"
                        android:src="@drawable/ic_back"
                        app:layout_collapseMode="pin" />

                    <TextView
                        android:id="@+id/tvProfile"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/nunito_extrabold"
                        android:text="@string/profile"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_collapseMode="pin" />

                    <ImageView
                        android:id="@+id/ivShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/back_view"
                        android:src="@drawable/ic_share"
                        app:layout_collapseMode="pin" />

                </androidx.appcompat.widget.Toolbar>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivUser"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mainToolbar"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvRepository"
                    style="@style/TextSubResourceUser"
                    android:text="@string/repository"
                    app:layout_constraintEnd_toStartOf="@id/tvFollowers"
                    app:layout_constraintStart_toEndOf="@id/ivUser"
                    app:layout_constraintTop_toBottomOf="@id/tvTotalRepository" />

                <TextView
                    android:id="@+id/tvTotalRepository"
                    style="@style/TextTotalResourceUser"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="@id/tvRepository"
                    app:layout_constraintStart_toStartOf="@id/tvRepository"
                    app:layout_constraintTop_toTopOf="@id/ivUser"
                    tools:text="0" />

                <TextView
                    android:id="@+id/tvFollowers"
                    style="@style/TextSubResourceUser"
                    android:text="@string/followers"
                    app:layout_constraintEnd_toStartOf="@id/tvFollowing"
                    app:layout_constraintStart_toEndOf="@id/tvRepository"
                    app:layout_constraintTop_toBottomOf="@id/tvTotalFollowers" />

                <TextView
                    android:id="@+id/tvTotalFollowers"
                    style="@style/TextTotalResourceUser"
                    app:layout_constraintEnd_toEndOf="@id/tvFollowers"
                    app:layout_constraintStart_toStartOf="@id/tvFollowers"
                    app:layout_constraintTop_toTopOf="@id/tvTotalRepository"
                    tools:text="0" />

                <TextView
                    android:id="@+id/tvFollowing"
                    style="@style/TextSubResourceUser"
                    android:layout_marginEnd="16dp"
                    android:text="@string/following"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvFollowers"
                    app:layout_constraintTop_toBottomOf="@id/tvTotalFollowing" />

                <TextView
                    android:id="@+id/tvTotalFollowing"
                    style="@style/TextTotalResourceUser"
                    app:layout_constraintEnd_toEndOf="@id/tvFollowing"
                    app:layout_constraintStart_toStartOf="@id/tvFollowing"
                    app:layout_constraintTop_toTopOf="@id/tvTotalFollowers"
                    tools:text="0" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/TextSub"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:layout_constraintStart_toStartOf="@id/ivUser"
                    app:layout_constraintTop_toBottomOf="@id/ivUser"
                    tools:text="Name" />

                <TextView
                    android:id="@+id/tvUsername"
                    style="@style/TextUserInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:layout_constraintStart_toStartOf="@id/tvName"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    tools:text="Username" />

                <TextView
                    android:id="@+id/tvBio"
                    style="@style/TextUserInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:drawableLeftCompat="@drawable/ic_person"
                    app:layout_constraintStart_toStartOf="@id/tvUsername"
                    app:layout_constraintTop_toBottomOf="@id/tvUsername"
                    tools:text="Bio" />

                <TextView
                    android:id="@+id/tvCompany"
                    style="@style/TextUserInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:drawableLeftCompat="@drawable/ic_company"
                    app:layout_constraintStart_toStartOf="@id/tvBio"
                    app:layout_constraintTop_toBottomOf="@id/tvBio"
                    tools:text="Company" />

                <TextView
                    android:id="@+id/tvLocation"
                    style="@style/TextUserInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:drawableLeftCompat="@drawable/ic_location"
                    app:layout_constraintStart_toStartOf="@id/tvCompany"
                    app:layout_constraintTop_toBottomOf="@id/tvCompany"
                    tools:text="Location" />

                <TextView
                    android:id="@+id/tvBlog"
                    style="@style/TextUserInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:drawableLeftCompat="@drawable/ic_blog"
                    app:layout_constraintStart_toStartOf="@id/tvLocation"
                    app:layout_constraintTop_toBottomOf="@id/tvLocation"
                    tools:text="Blog" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnOpenOnGitHub"
                    style="@style/ButtonStyle"
                    android:text="@string/open_on_github"
                    app:layout_constraintStart_toStartOf="@id/tvBlog"
                    app:layout_constraintTop_toBottomOf="@id/tvBlog" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorPrimaryVariant"
            android:overScrollMode="never"
            app:tabGravity="fill"
            app:tabTextColor="?attr/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_favorite_border"
        app:tint="?attr/colorPrimaryVariant" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="300dp"
        android:visibility="invisible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>